[package]
name = "rustycard"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.2", features = ["desktop", "router"] }
rusqlite = { version = "0.27", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.9"
platform-dirs = "0.3"
native-dialog = "0.6"
md5 = "0.7"
chrono = "0.4"
toml = "0.5"
zip = "0.6"
